--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,18 @@
 .header{
-  background-color: rgb(214, 245, 173);
-  border: 3px solid rgb(100, 77, 20);
-  line-height: 10px;
+  background-color: rgba(174, 175, 173, 0.205);
+  border: 3px solid rgb(99, 75, 16);
   text-decoration: none;
-  color: rgb(58, 54, 54);
-  /* padding: 5%; */
+  color: rgb(28, 36, 31);
   margin: 5%;
+  font-style: italic;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+
+.header:hover{
+  background-color: rgba(191, 245, 204, 0.384);
+  color: rgb(139, 79, 56);
+  cursor:pointer;
+  
+}
+
