--- a/src/components/Member/Members.css
+++ b/src/components/Member/Members.css
@@ -1,22 +1,22 @@
 body{
-  background-color: rgba(179, 189, 201, 0.356);
+  background-color: rgba(101, 150, 143, 0.356);
 }
-h1{
-  color: rgb(70, 105, 105);
-}
-
 .members-container{
   display: grid;
   grid-template-columns: 3fr 1fr;
   color: black;
+  background-color: rgba(204, 200, 199, 0.445);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-style: italic;
   
 }
+
 
 .members-container .member-container{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 5%;
   grid-row-gap: 2%;
-   padding: 50px; 
+  padding: 50px; 
    
 }
